# SnakeGame

./: .gitignore  Algo.xlsx  CMakeLists.txt  GameOverMessage.txt  SnakeGame.sln  ToDo.txt
SnakeGame/: Border.cpp  Border.h  BoxDirection.h  CloseEventHandler.h  CollisionManager.cpp  CollisionManager.h  Color.h  Constants.h  CrossPlatformUtils.h  Direction.h  DirectionalPoint2D.h  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameObject.h  GameOver.cpp  GameOver.h  GameState.cpp  GameState.h  GameTimer.cpp  GameTimer.h  MovableObserver.h  Player.cpp  Player.h  Point2D.h  PositionGenerator.cpp  PositionGenerator.h  Renderer.h  SDLRenderingEngine.cpp  SDLRenderingEngine.h  ScoreBoard.cpp  ScoreBoard.h  SnakeBodyPart.h  SnakeGame.rc  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  SpritePositions.h  SpriteSheetTexture.cpp  SpriteSheetTexture.h  (+5 more)
SnakeGame/res/images/: Snake.xcf  Snake2.xcf
